[gd_scene load_steps=5 format=3 uid="uid://2y4d8cjjq4rj"]

[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_05m46"]
[ext_resource type="PackedScene" uid="uid://buumjg2jt2l2w" path="res://scenes/laser/laser.tscn" id="1_vjdl4"]
[ext_resource type="PackedScene" uid="uid://c6jkqa58jgl7c" path="res://scenes/pipe/pipe.tscn" id="2_qej80"]
[ext_resource type="AudioStream" uid="uid://ifj0pcpaq2d5" path="res://assets/audio/score.wav" id="3_1s5tf"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_05m46")

[node name="Upper" parent="." instance=ExtResource("2_qej80")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("2_qej80")]
position = Vector2(0, 80)

[node name="Laser" parent="." instance=ExtResource("1_vjdl4")]
z_index = -1

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(30, 0)

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1s5tf")

[connection signal="body_entered" from="Upper" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
